--- a/index.html
+++ b/index.html
@@ -87,11 +87,11 @@
   
   <h1>Booking.com</h1>
  <h2>How can we help you today?</h2>
- <h2>For Refund & Returns</h2>
+ <h2>For Booking & Cancellation</h2>
  <H2>Speak With Our Agents</H2>
 <center>Contact Us: <font size="5" color="black"><a href="tel:+1 (513) 513-4332">+1 (513) 513-4332</a></font>  
 <p>we're available 24 hours a day</p>
- <h3>For Booking Motors and any other query. Call Us Now <h3>
+ <h3>For Hotel Booking and any other query. Call Us Now <h3>
  
  <a href="tel:+1-(513) 513-4332" class="call-button">Call Booking.com</a>
   <center><head>
